Fix footer copyright align

--- a/assets/stylesheets/pages/_footer.scss
+++ b/assets/stylesheets/pages/_footer.scss
@@ -102,7 +102,6 @@
       display: inline-block;
       margin-left: 80px;
       margin-top: -38px;
-      text-align: center;
       text-transform: uppercase;
       p {
         color: #5f514c;
